fixed header/footer not appearing on mobile if pagecount is only 1

--- a/client/mainpage/mainpage.css
+++ b/client/mainpage/mainpage.css
@@ -119,7 +119,6 @@ a{
     z-index: 999999;
     width:100%;
     opacity:1.0;
-    padding-bottom:8px;
     background:rgb(66, 75, 109);
     -moz-transition:    opacity .4s linear;
 	-webkit-transition: opacity .4s linear;
@@ -221,6 +220,7 @@ a{
     margin-right:auto;
     width:100%;
     text-align:center;
+    padding-bottom:8px;
 }
 
 .pager-text{
@@ -231,7 +231,6 @@ a{
     cursor:pointer;
     padding:10px;
     background-color: #000;
-     
     font-family: 'Montserrat', sans-serif;
     display: inline-block;
     margin-top: 2px;
@@ -369,6 +368,10 @@ a{
     .opened-image img{
         width: 100%;
         height: auto;
+    }
+    
+    .under-image{
+        padding-bottom: 50px; /*compensate for potential close button overlap*/
     }
 
 } 
